[gd_scene load_steps=9 format=3 uid="uid://dd2c4auq6ei4n"]

[ext_resource type="Script" path="res://Main/main.gd" id="1_xvxt5"]
[ext_resource type="PackedScene" uid="uid://bvpoooctjquuv" path="res://Zombie/zombie.tscn" id="2_65leq"]
[ext_resource type="PackedScene" uid="uid://dj43jpnyoo4a" path="res://Maps/Map1.tscn" id="3_7isg7"]
[ext_resource type="PackedScene" uid="uid://5n1yvuc5xvcx" path="res://Player/Peashooter/peashooter_leg.tscn" id="3_h1kid"]

[sub_resource type="Curve2D" id="Curve2D_t86wu"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -212, 779, 0, 0, 0, 0, 215, 779)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_7sr0c"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -209, 3618, 0, 0, 0, 0, 212, 3618)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_vkva5"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -909, -226, 0, 0, 0, 0, -910, 225)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_lln4t"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 869, -236, 0, 0, 0, 0, 869, 238)
}
point_count = 2

[node name="Main" type="Node"]
script = ExtResource("1_xvxt5")
zombie_scene = ExtResource("2_65leq")

[node name="Game field" type="Node" parent="."]

[node name="Map1" parent="Game field" instance=ExtResource("3_7isg7")]

[node name="Leg" parent="Game field" instance=ExtResource("3_h1kid")]
z_index = 1
position = Vector2(1.52588e-05, -0.00012207)
scale = Vector2(0.2, 0.2)
metadata/_edit_group_ = true

[node name="Camera2D" type="Camera2D" parent="Game field/Leg"]
visible = false

[node name="Path" type="Node" parent="Game field"]

[node name="Top path" type="Path2D" parent="Game field/Path"]
visible = false
position = Vector2(0, -4371)
curve = SubResource("Curve2D_t86wu")

[node name="PathFollow2D" type="PathFollow2D" parent="Game field/Path/Top path"]
position = Vector2(-212, 779)

[node name="Top timer" type="Timer" parent="Game field/Path/Top path"]
wait_time = 7.0
autostart = true

[node name="Bot path" type="Path2D" parent="Game field/Path"]
visible = false
curve = SubResource("Curve2D_7sr0c")

[node name="PathFollow2D" type="PathFollow2D" parent="Game field/Path/Bot path"]
position = Vector2(-209, 3618)

[node name="Bot timer" type="Timer" parent="Game field/Path/Bot path"]
wait_time = 7.0
autostart = true

[node name="Left path" type="Path2D" parent="Game field/Path"]
visible = false
position = Vector2(-2690, 0)
curve = SubResource("Curve2D_vkva5")

[node name="PathFollow2D" type="PathFollow2D" parent="Game field/Path/Left path"]
position = Vector2(-909, -226)
rotation = 1.57301

[node name="Left timer" type="Timer" parent="Game field/Path/Left path"]
wait_time = 7.0
autostart = true

[node name="Right path" type="Path2D" parent="Game field/Path"]
visible = false
position = Vector2(2733, 0)
curve = SubResource("Curve2D_lln4t")

[node name="PathFollow2D" type="PathFollow2D" parent="Game field/Path/Right path"]
position = Vector2(869, -236)
rotation = 1.5708

[node name="Right timer" type="Timer" parent="Game field/Path/Right path"]
wait_time = 7.0
autostart = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="timeout" from="Game field/Path/Top path/Top timer" to="." method="_on_top_timer_timeout"]
[connection signal="timeout" from="Game field/Path/Bot path/Bot timer" to="." method="_on_bot_timer_timeout"]
[connection signal="timeout" from="Game field/Path/Left path/Left timer" to="." method="_on_left_timer_timeout"]
[connection signal="timeout" from="Game field/Path/Right path/Right timer" to="." method="_on_right_timer_timeout"]
